<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/sobre_mi">
            <menu>
                <item
                    android:id="@+id/nav_miPerfil"
                    android:icon="@drawable/outline_account_circle_24"
                    android:title="@string/btn_menu_miPerfil" />

                <item
                    android:id="@+id/nav_mensajes"
                    android:icon="@drawable/baseline_email_24"
                    android:title="@string/btn_menu_mensajes" />
            </menu>
        </item>

        <item android:title="@string/mascotas">
            <menu>
                <item
                    android:id="@+id/nav_pedirCita"
                    android:icon="@drawable/baseline_calendar_today_24"
                    android:title="@string/btn_menu_pedirCita" />

                <item
                    android:id="@+id/nav_registrarMascota"
                    android:icon="@drawable/baseline_add_24"
                    android:title="@string/btn_menu_registrarMascota" />

                <item
                    android:id="@+id/nav_historialMascotas"
                    android:icon="@drawable/icons8_huella_de_gato_24"
                    android:title="@string/btn_menu_historialMascotas" />
            </menu>
        </item>

        <item
            android:id="@+id/nav_FAQ"
            android:icon="@drawable/baseline_help_outline_24"
            android:title="@string/btn_menu_FAQ" />

        <item
            android:id="@+id/nav_CerrarSesion"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/btn_menu_cerrarSesion"
            android:visible="true" />
    </group>
</menu>