<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.inicioSesionRegistro.ContrasenaOlvidadaActivity"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/escribe_tu_numero_para_nueva_passwd_sms"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/poppins"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:text="@string/escribe_el_numero_sin_prefijo"
            android:textColor="@color/dark_gray"
            android:textSize="13sp"
            android:fontFamily="@font/poppins"/>

        <!-- EDIT TEXT CORREO -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/escribe_tu_numTlf">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNumTelefonoPasswdOlvidada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- BOTON ENVIAR -->
        <Button
            android:id="@+id/btnEnviarSMS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_border"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/enviar_sms"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- BOTON ATRÁS -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAtras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/volver"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:strokeColor="@color/black"
            app:strokeWidth="0dp"
            android:backgroundTint="#E41515"
            android:padding="8dp"
            android:fontFamily="@font/poppins_bold"
            app:icon="@drawable/baseline_arrow_back_32"
            app:iconGravity="textStart" />

    </LinearLayout>

</LinearLayout>