<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarStyle="outsideOverlay"
    android:background="@drawable/fondogris_app">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragmentos.registrarse_Fragment.registrarse_Fragment"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="177dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:src="@drawable/logovet"
            app:strokeColor="@color/black"
            app:strokeWidth="5dp"/>

        <!-- ||||||||||||||||||||||||||||||||||||||||||||||||||| -->
        <!-- ||||||||||||||||||||||||||||||||||||||||||||||||||| -->
        <!-- ||||||||||||||||||||||||||||||||||||||||||||||||||| -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corner_background"
            android:orientation="vertical"
            android:padding="15dp" >

            <!-- Nombre -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/nombre"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_semibold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:hint="@string/escribe_tu_nombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_border"
                    android:fontFamily="@font/poppins"
                    android:inputType="textCapWords"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Apellidos -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apellidos"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_semibold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:hint="@string/escribe_tu_apellido">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_border"
                    android:fontFamily="@font/poppins"
                    android:inputType="textCapWords"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Correo electrónico -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/correo"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_semibold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:hint="@string/escribe_tu_correo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCorreoElectronico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_border"
                    android:fontFamily="@font/poppins"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Contraseña -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contrasena"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_semibold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:hint="@string/escribe_tu_contrasena"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_border"
                    android:fontFamily="@font/poppins"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Repetir contraseña -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repite_contrasena"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_semibold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:hint="@string/escribe_tu_contrasena"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRepiteContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_border"
                    android:fontFamily="@font/poppins"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Número de teléfono -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numero_telefono"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_semibold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:hint="@string/escribe_tu_numTlf">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNumTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_border"
                    android:fontFamily="@font/poppins"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <!-- ||||||||||||||||||||||||||||||||||||||||||||||||||| -->
            <!-- ||||||||||||||||||||||||||||||||||||||||||||||||||| -->
            <!-- ||||||||||||||||||||||||||||||||||||||||||||||||||| -->


            <Button
                android:id="@+id/btnRegistrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrarse"
                android:gravity="center"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:background="@drawable/btn_border"
                android:fontFamily="@font/poppins_bold"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLimpiarCampos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/limpiar_campos"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:strokeColor="@color/black"
                app:strokeWidth="0dp"
                android:backgroundTint="#E41515"
                android:padding="9dp"
                android:fontFamily="@font/poppins_bold"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>